syntax = "proto3";

// This file is generated by github.com/TBD54566975/ftl/schema/protobuf.go, DO NOT MODIFY
package xyz.block.ftl.v1.schema;

option go_package = "github.com/TBD54566975/ftl/protos/xyz/block/ftl/v1/schema;pschema";
option java_multiple_files = true;

message Array {
  Type element = 1;
}

message Bool {}

message Data {
  optional Position pos = 1;
  string name = 2;
  repeated Field fields = 3;
  repeated Metadata metadata = 4;
}

message DataRef {
  optional Position pos = 1;
  string name = 2;
  string module = 3;
}

message Decl {
  oneof value {
    Data data = 1;
    Verb verb = 2;
  }
}

message Field {
  optional Position pos = 1;
  string name = 2;
  repeated string comments = 3;
  Type type = 4;
}

message Float {}

message Int {}

message Map {
  Type key = 1;
  Type value = 2;
}

message Metadata {
  oneof value {
    MetadataCalls calls = 1;
  }
}

message MetadataCalls {
  optional Position pos = 1;
  repeated VerbRef calls = 2;
}

message Module {
  optional Position pos = 1;
  string name = 2;
  repeated string comments = 3;
  repeated Decl decls = 4;
}

message Position {
  string filename = 1;
  int64 line = 2;
  int64 column = 3;
}

message Schema {
  optional Position pos = 1;
  repeated Module modules = 2;
}

message String {}

message Time {}

message Type {
  oneof value {
    Int int = 1;
    Float float = 2;
    String string = 3;
    Bool bool = 4;
    Array array = 5;
    Map map = 6;
    VerbRef verbRef = 7;
    DataRef dataRef = 8;
    Time time = 9;
  }
}

message Verb {
  optional Position pos = 1;
  string name = 2;
  repeated string comments = 3;
  DataRef request = 4;
  DataRef response = 5;
  repeated Metadata metadata = 6;
}

message VerbRef {
  optional Position pos = 1;
  string name = 2;
  string module = 3;
}
